--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
     "require": {
+        "php": "^8.1",
         "sagem-cassiopee/php-metar-decoder": "dev-master"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.0"
+    },
+    "scripts": {
+        "code-sniff": [
+            "./vendor/bin/phpcbf --ignore=vendor --standard=./lint/ruleset.xml ./"
+        ]
     }
 }
+
