--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,13 @@
-DirectoryIndex parser.php
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteCond %{REQUEST_URI} ^/parser$
+  RewriteRule . /parser.php [L]
+  
+  
+  RewriteCond %{REQUEST_URI} ^/datis$
+  RewriteRule . /datis.php [L]
+  
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /parser.php [L]
+</IfModule>
